--- a/julian_simulations_v4.ipynb
+++ b/julian_simulations_v4.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "36eaf072",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
    "id": "d0fc28b8",
    "metadata": {},
    "source": [
-    "## **2. Data Post-Processing**"
+    "### **2. Data Post-Processing**"
    ]
   },
   {
@@ -62,8 +62,8 @@
     "        dataset.get_level(_lev)\n",
     "\n",
     "        # extract dust density at given phi (where the planet locates)\n",
-    "        Q = dataset['rhod_1'][int(dataset.ccphi.size * phiangle // 360), :, :]\n",
-    "        #Q = ds['rhod_1'][i_phi, :, :]\n",
+    "        Q = dataset['rhod_1'][int(dataset.ccphi.size*phiangle//360), :, :]\n",
+    "        #Q = dataset['rhod_1'][i_phi, :, :]\n",
     "        im = ax.pcolormesh(\n",
     "            dataset.cctheta,\n",
     "            dataset.ccr,\n",
@@ -111,7 +111,7 @@
     "        labelpad=12\n",
     "    )\n",
     "\n",
-    "    filename = f'/home/dasein/repositories/notebooks_julian/disk_slices/plot_{phiangle:03d}.png'\n",
+    "    filename = f\"/home/dasein/repositories/notebooks_julian/disk_slices/plot_{phiangle:03d}.png\"\n",
     "    fig.savefig(filename)\n",
     "    plt.close(fig)"
    ]
